--- a/README.adoc
+++ b/README.adoc
@@ -2,6 +2,10 @@
 
 Use this action to perform static application security testing (SAST) on a repository with the Trivy scanner, and then view comprehensive security results in the CloudBees platform.
 
+== Prerequisites
+
+Set up the CloudBees platform and GHA to work together, providing key features of the platform to GHA workflows. Refer to link:https://docs.cloudbees.com/docs/cloudbees-platform/latest/github-actions/gha-getting-started[Getting started with GHA integration] for more information.
+
 == Inputs
 
 [cols="2a,1a,1a,3a",options="header"]
